--- a/AnimalsPalace2/src/main/java/View/Cadastro/DonoEditar.form
+++ b/AnimalsPalace2/src/main/java/View/Cadastro/DonoEditar.form
@@ -117,7 +117,6 @@
         <Property name="text" type="java.lang.String" value="Editar"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BtEditarMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtEditarActionPerformed"/>
       </Events>
       <Constraints>
@@ -202,6 +201,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="Fundo">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\planodefundo3.png"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="0" width="517" height="-1"/>
