--- a/AnimalsPalace2/src/main/java/View/Cadastro/FornEditar.form
+++ b/AnimalsPalace2/src/main/java/View/Cadastro/FornEditar.form
@@ -169,7 +169,7 @@
     <Component class="javax.swing.JLabel" name="Fundo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\planodefundo3.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\planodefundo3.png"/>
         </Property>
       </Properties>
       <Constraints>
