--- a/AnimalsPalace2/src/main/java/View/TelaFuncionarios.form
+++ b/AnimalsPalace2/src/main/java/View/TelaFuncionarios.form
@@ -29,15 +29,15 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\lupa2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\lupa2.png"/>
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lupaMouseClicked"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lupaMousePressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="750" y="40" width="90" height="60"/>
+          <AbsoluteConstraints x="730" y="30" width="90" height="70"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -56,6 +56,9 @@
         <Component class="javax.swing.JTextPane" name="FuncSelecionado">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Baskerville Old Face" size="24" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Funcion&#xe1;rio Selecionado"/>
           </Properties>
           <AuxValues>
@@ -104,7 +107,7 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="40" minWidth="30" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -114,12 +117,7 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="140" minWidth="130" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="110" minWidth="100" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -129,12 +127,17 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="110" minWidth="100" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="110" minWidth="100" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -147,7 +150,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTabela_Mostra_FuncMouseClicked"/>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTabela_Mostra_FuncMousePressed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -157,14 +160,15 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Brush Script MT" size="36" style="0"/>
         </Property>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Editar"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="EditarMouseClicked"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="EditarMousePressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="670" y="190" width="100" height="40"/>
+          <AbsoluteConstraints x="660" y="190" width="120" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -177,7 +181,7 @@
         <Property name="text" type="java.lang.String" value="Novo"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="NovoMouseClicked"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="NovoMousePressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -188,11 +192,11 @@
     <Component class="javax.swing.JLabel" name="setinha">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\setinha2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\setinha2.png"/>
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="setinhaMouseClicked"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="setinhaMousePressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -203,7 +207,7 @@
     <Component class="javax.swing.JLabel" name="moldura2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -215,36 +219,35 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\input3.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\input3.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jLabel3"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="210" y="30" width="640" height="70"/>
+          <AbsoluteConstraints x="210" y="30" width="620" height="70"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="Contatar">
+    <Component class="javax.swing.JLabel" name="Atualizar">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Brush Script MT" size="36" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Contatar"/>
+        <Property name="text" type="java.lang.String" value="Atualizar"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ContatarMouseClicked"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="AtualizarMousePressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="520" y="190" width="110" height="40"/>
+          <AbsoluteConstraints x="520" y="190" width="120" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="moldura3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -256,9 +259,8 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\input3.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\input3.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -269,7 +271,7 @@
     <Component class="javax.swing.JLabel" name="moldura1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\botao2.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -281,7 +283,7 @@
     <Component class="javax.swing.JLabel" name="Fundo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Gabim\Desktop\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\fundo4.png"/>
+          <Image iconType="2" name="C:\Users\Gabim\OneDrive\&#xc1;rea de Trabalho\PA\PA---4S-master\AnimalsPalace\src\main\java\imagens\fundo4.png"/>
         </Property>
       </Properties>
       <Constraints>
